--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@react-navigation/bottom-tabs": "^5.2.4",
     "@react-navigation/native": "^5.1.3",
     "@react-navigation/stack": "^5.2.9",
+    "@unform/core": "^2.1.0",
+    "@unform/mobile": "^2.1.0",
     "@use-expo/font": "^1.0.1",
     "axios": "^0.19.2",
     "expo": "~36.0.0",
@@ -27,7 +29,8 @@
     "react-native-simple-radio-button": "^2.7.4",
     "react-native-web": "~0.11.7",
     "react-redux": "^7.2.0",
-    "redux": "^4.0.5"
+    "redux": "^4.0.5",
+    "yup": "^0.28.4"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
