--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "expo-constants": "^9.0.0",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
+    "react-input-mask": "^3.0.0-alpha.2",
     "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.0.tar.gz",
     "react-native-gesture-handler": "^1.5.6",
+    "react-native-masked-text": "^1.13.0",
     "react-native-paper": "^3.7.0",
     "react-native-reanimated": "~1.4.0",
     "react-native-safe-area-context": "0.6.0",
